--- a/git/04-remotes-and-collaboration/index.html
+++ b/git/04-remotes-and-collaboration/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Git</title>
+  <title>Flashcards - Git - 04-Remotes-And-Collaboration</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,13 +16,7 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01_foundations/" role="button">01 Foundations</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./02_local_basics/" role="button">02 Local Basics</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./03_branching/" role="button">03 Branching</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./04-remotes-and-collaboration/" role="button">04-Remotes-And-Collaboration</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01-cloning-repos/" role="button">01-Cloning-Repos</a>
 
 
       </div>
