--- a/rust/06-intermediate-rust/02-traits-and-generics/index.html
+++ b/rust/06-intermediate-rust/02-traits-and-generics/index.html
@@ -24,6 +24,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./04-trait-bounds/" role="button">04-Trait-Bounds</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./05-generic-types/" role="button">05-Generic-Types</a>
+
 
       </div>
     </div>
