--- a/rust/06-intermediate-rust/02-traits-and-generics/index.html
+++ b/rust/06-intermediate-rust/02-traits-and-generics/index.html
@@ -30,6 +30,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./07-trait-objects-part-1/" role="button">07-Trait-Objects-Part-1</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./08-trait-objects-part-2/" role="button">08-Trait-Objects-Part-2</a>
+
 
       </div>
     </div>
