--- a/rust/06-intermediate-rust/04-smart-pointers/index.html
+++ b/rust/06-intermediate-rust/04-smart-pointers/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Rust - 06-Intermediate-Rust</title>
+  <title>Flashcards - Rust - 06-Intermediate-Rust - 04-Smart-Pointers</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,13 +16,11 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01-ownership_and_lifetimes/" role="button">01-Ownership And Lifetimes</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01-what-are-smart-pointers/" role="button">01-What-Are-Smart-Pointers</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./02-traits-and-generics/" role="button">02-Traits-And-Generics</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./02-deref-and-drop-traits/" role="button">02-Deref-And-Drop-Traits</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./03-iterators-and-closures/" role="button">03-Iterators-And-Closures</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./04-smart-pointers/" role="button">04-Smart-Pointers</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./03-box/" role="button">03-Box</a>
 
 
       </div>
