--- a/rust/07-concurrency/02-thread_basics/index.html
+++ b/rust/07-concurrency/02-thread_basics/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Rust - 07-Concurrency</title>
+  <title>Flashcards - Rust - 07-Concurrency - 02-Thread Basics</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,9 +16,11 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01-foundations/" role="button">01-Foundations</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01-threads/" role="button">01-Threads</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./02-thread_basics/" role="button">02-Thread Basics</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./02-thread-panics-and-error-handling/" role="button">02-Thread-Panics-And-Error-Handling</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./03-move-semantics-with-threads/" role="button">03-Move-Semantics-With-Threads</a>
 
 
       </div>
